Fix alignment of post images

--- a/css/post.css
+++ b/css/post.css
@@ -42,19 +42,17 @@ div.meta ul li:last-of-type:after {
 	margin-top: 2em;
 }
 
-.post .img {
+.post img {
 	display: block;
-	text-align: center;
-}
-
-.post .img img {
 	background-color: #fff;
 	padding: 0.5em;
 	border: 1px solid #cccccc;
+    margin-left: auto;
+    margin-right: auto
 }
 
 @media only screen and (max-width : 540px) {
-  .post .img img {
+  .post img {
     max-width: 460px;
   }
 }
